# pySigma-pipeline-ocsf

./: pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/pipelines/ocsf/: ocsf.py
tests/: conftest.py  test_processing_pipelines_ocsf.py
