[project]
name = "pySigma-pipeline-ocsf"
version = "0.1.1"
description = "pySigma OCSF pipeline"
readme = "README.md"
authors = [
    {name = "Hendrik Baecker",email = "hendrik.baecker@dcso.de"}
]
license = "MIT"
repository = "https://github.com/SigmaHQ/pySigma-pipeline-ocsf"
dependencies = [
	"pysigma @ git+https://github.com/SigmaHQ/pySigma.git@v1.0.0rc2"
]
requires-python = "^3.10"

[tool.poetry]
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
pysigma = ">=0.11.23,<2.0.0"

[tool.poetry.group.dev.dependencies]
defusedxml = "^0.7.1"
pytest = ">=7.3,<9.0"
pytest-cov = ">=4,<7"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
